cropping double click issue fix

--- a/src/pages/applyFreelancer/applyFreelancer.css
+++ b/src/pages/applyFreelancer/applyFreelancer.css
@@ -83,7 +83,7 @@
 }
 
 .profile-image-box {
-    height: 134px;
+    max-height: 181px;
     position: relative;
     display: flex;
     justify-content: center;
